--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -108,7 +108,7 @@
 
 #logonav {
 	  margin-top: 1px;
-    margin-left:15%;
+    margin-left:35%;
 }
 
 /* Sticky footer styles
@@ -134,6 +134,14 @@ body {
 #footer {
   height: 60px;
   background-color: #f5f5f5;
+}
+
+#button-login {
+  display: inline-block;
+}
+
+#button-register {
+  display: inline-block;
 }
 
 div.message {
