--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -129,6 +129,9 @@
     width:90px;
     margin-left: 5%;
     margin-top:5px;
+    position: relative;
+    float: left;
+
 }
 
 /* Sticky footer styles
@@ -154,6 +157,12 @@ body {
 #footer {
   height: 60px;
   background-color: #f5f5f5;
+}
+
+.site-footer {
+    padding: 0px;
+    background-color: #f5f5f5;
+    box-shadow: inset 0 1px 2px 1px rgba(0, 0, 0, 0.08);
 }
 
 #button-login {
@@ -310,15 +319,21 @@ div.message.error {
   font-family: 'Source Sans Pro';
   font-weight: 400;
   font-size: 15px;
-  margin-top: 28px;
+  margin-top: -2px;
   margin-left: 60px;
 
 }
 
 #btnQuote {
-  margin-top: -60px;
+  /*margin-top: -60px;*/
     position: absolute;
     margin-left: 80%;
+    background-color: #79be0b;;
+}
+
+#btnQuote:hover{
+background-color: #009900;
+color: #ebebeb;
 }
 
 body,html {
@@ -356,6 +371,7 @@ body,html {
   .social-icons{
     padding-top:10px;
     margin-bottom:10px;
+    margin-top: 15px;
   }
   .social-icons .btn.btn-clear{
     border:1px solid #79be0b;
