--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -347,8 +347,8 @@ div.message.error {
   font-family: 'Source Sans Pro';
   font-weight: 400;
   font-size: 15px;
-  margin-top: -2px;
-  margin-left: 60px;
+  /*margin-top: -2px;*/
+/*  margin-left: 60px;*/
 
 }
 
@@ -367,9 +367,6 @@ div.message.error {
 }
 
 #btnQuote {
-  /*margin-top: -60px;*/
-    position: absolute;
-    margin-left: 80%;
     background-color: #79be0b;
 }
 
@@ -465,3 +462,9 @@ body,html {
   .btn.btn-google:hover{
     color:#D3492C;
     }.left{float:left}.right{float:right}.text-center{text-align:center}.centered{margin-left:auto;margin-right:auto;float:none}@media(max-width:992px){#page-profile .profile{margin:0 auto 20px}}@media (max-width:479px){#page-welcome header h1{font-size:2em}#page-welcome header p{font-size:1em;line-height:3em}.section-title{font-size:1.5em}.section-header p{font-size:1.2em}#grid,#page-skills{text-align:center}#page-profile .profile{margin:0 auto 20px}}
+
+#totalTable {
+  border: 1px solid #000;
+  border-radius:0.2em ;
+  position
+}
