--- a/webroot/css/forpdf.css
+++ b/webroot/css/forpdf.css
@@ -120,6 +120,19 @@ header title, header p {
 	border: 1px solid black;
 }
 
+.table3 {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+.table3 th, .table3 td {
+	border-collapse: collapse;
+	padding: 3px 7px 2px 7px;
+	border: 1px solid black;
+}
+
 
 header address { 
 	float: right; font-size: 95%; font-style: normal; line-height: 1.25; margin: 0 1em 1em 0; display:block; 
