--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -353,12 +353,7 @@ div.message.error {
 }
 
 #btnLogin {
-    width: 200px;
-    height: 60px;
-    text-align: center;
-    margin-top: 22px;
-    background-color: greenyellow;
-    font-size: 30px;
+    background-color: #79be0b;
 }
 
 #btnLogin:hover {
