some websites view are fixed, pdf on progress, quote on progress
Neilan look at the website thingy, get rid of those panell thingy, look
at home.ctp & doubleglazed.ctp for example

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -357,7 +357,21 @@ div.message.error {
 /*  margin-left: 60px;*/
 
 }
+#btnQuote1 {
+    width: 220px;
+    height: 57px;
+    text-align: center;
+    margin-top: 22px;
+    font-size: 25px;
+    background-color: #79be0b;
+}
 
+#btnQuote1:hover {
+  background-color: #009900;
+color: #ebebeb;
+
+
+}
 #btnLogin {
     background-color: #79be0b;
 }
