--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -4,9 +4,7 @@
  }*/
 }
 
-#bw-carousel {
-  margin-top: -20px;
-}
+
 
 #head_backend {
   padding:0 0 5px 0;
@@ -133,8 +131,8 @@
 #logonav1 {
     height:90px;
     width:90px;
-    margin-left: 5%;
-    margin-top:5px;
+    /*margin-left: 5%;*/
+    padding-top:5px;
     position: relative;
     float: left;
 
@@ -150,23 +148,23 @@ body {
 
 /* Wrapper for page content to push down footer */
 #wrap {
-  min-height: 100%;
+/*  min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -100px;
+  /*margin: 0 auto -100px;*/
   /* Pad bottom by footer height */
-  padding-bottom: 100px;
+  /*padding-bottom: 100px;*/*/
 }
 
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 300px;
+  padding:20px 0;
   background-color: #373737 ;
   color: #969696;
+  padding-top: 40px;
 }
 #back-footer {
-  height: 100px;
   background-color: #373737 ;
   color: #969696;
   float: bottom;
@@ -182,21 +180,21 @@ body {
   color: #fff;
 }
 
-#footer .section-title{
+.section-title{
   color: #fff;
 }
 
-#footer .footer-bottom{
+.footer-bottom{
     background: #272727;
     color: #888;
     line-height: 10px;
-    padding: 15px;  
-    padding-top: 10px;
+    padding: 22px 0; 
+    
 
   /* Negative indent footer by its height */
   /* Pad bottom by footer height */
-  margin-top: 100px;
-  padding-bottom: 30px;
+/*  margin-top: 100px;
+  padding-bottom: 30px;*/
 }
 
 #button-login {
@@ -483,3 +481,25 @@ body,html {
   border-radius:0.2em ;
   position
 }
+/*Carousel Setting*/
+#bw-carousel {
+  margin-top: -20px;
+
+}
+
+.carousel {
+  width:100%; 
+margin:0 auto;
+}
+.sliding {
+  margin:0 auto;
+}
+
+@media only screen and (max-width: 548px) {
+    .social-icons {
+        display: none;
+    }
+}
+
+
+
