--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -502,5 +502,18 @@ margin:0 auto;
     }
 }
 
+.table3 {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+.table3 th, .table3 td {
+  border-collapse: collapse;
+  padding: 3px 7px 2px 7px;
+  border: 1px solid black;
+}
+
 
 
